[package]
name = "standalone-test"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
client_bootstrapper = { path = "crates/client_bootstrapper" }

anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.3"
