[package]
name = "client_bootstrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
cookie = "0.16.1"
deploy_history = { path = "../deploy_history" }
futures = "0.3.25"
log = "0.4.17"
mime_guess = "2.0.4"
rand = "0.8.5"
rbx_cookie = "0.1.2"
reqwest = { version = "0.11.12", features = ["json", "cookies"] }
secrecy = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
sha256 = "1.1.1"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
wry = { version = "0.22", features = ["transparent", "dox", "protocol"], default-features = false }
zip = "0.6.3"

[features]
devtools = ["wry/devtools"]
