[package]
name = "deploy-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
time = { version = "0.3.17", features = ["serde", "formatting", "parsing", "macros"] }
